--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
                 </form>
 
                 <h2 class="title">Items</h2>
-                <ul id="itmes" class="list-group">
+                <ul id="items" class="list-group">
                     <li class="list-group-item">Item 1</li>
                     <li class="list-group-item">Item 1</li>
                     <li class="list-group-item">Item 1</li>
                     <li class="list-group-item">Item 1</li>
                 </ul>
+                <span></span>
 
             </div>
         </div>
