--- a/index.html
+++ b/index.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <TITLE>Javascript Practice</TITLE>
-        <link rel="stylesheet" href="main.css" >
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+        <TITLE>Javascript Practice DOM</TITLE>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
     <body>
 
-        <p>Js sablon</p>
+        <header id="main-header" class="bg-success text-white p-4 mb-3">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <h1 id="header-title">Item Listener</h1>
+                    </div>
+                    <div class="col-md-6 align-self-center">
+                        <input type="text" id="filter" class="form-control" placeholder="Search items...">
+                    </div>
+
+                </div> 
+            </div>
+        </header>
+
+        <div class="container">
+            <div id="main" class="card card-body">
+                
+                <h2 class="title">Add Items</h2>
+                <form id="addForm" class="form-inline mb-3">
+                    <input type="text" id="item" class="form-control mr-2">
+                    <input type="submit" class="btn btn-dark" value="Submit">
+                </form>
+
+                <h2 class="title">Items</h2>
+                <ul id="items" class="list-group">
+                    <li class="list-group-item">
+                        Item 1
+                        <button class="btn btn-danger btn-sm float-right delete">x</button>
+                    </li>
+                    <li class="list-group-item">
+                        Item 2
+                        <button class="btn btn-danger btn-sm float-right delete">x</button>
+                    </li>
+                    <li class="list-group-item">
+                        Item 3
+                        <button class="btn btn-danger btn-sm float-right delete">x</button>
+                    </li>
+                    <li class="list-group-item">
+                        Item 4
+                        <button class="btn btn-danger btn-sm float-right delete">x</button>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
 
     <script src="app.js"></script>
     </body>
