--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     </head>
     <body>
 
-        <p>Js sablon</p>
+        <h2 id="title">Classes: HTML List Binding</h2>
+        <hr/>
+
+        <ul id="myList">
+            <!--To be filled by Javascript-->
+            <li>dcode</li>
+            <li>is</li>
+            <li>not bad</li>
+        </ul>
 
     <script src="app.js"></script>
+    <script>
+        const myList = document.getElementById('myList');
+        const listBinding = new ListBinding(myList);
+    </script>
     </body>
 </html>
